--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,7 +5,7 @@ jobs:
   my_first_job:
     runs-on: ubuntu-latest
     container:
-      image: debian:stanle-slim
+      image: debian:stable-slim
       env:
         NODE_ENV: development
     steps:
